
** Old-style backquotes now generate an error.  They have been
generating warnings for a decade.  To interpret old-style backquotes
as new-style, bind the new variable 'force-new-style-backquotes' to t.

** Defining a Common Lisp structure using 'cl-defstruct' or
'cl-struct-define' whose name clashes with a builtin type (e.g.,
'integer' or 'hash-table') now signals an error.


* Lisp Changes in Emacs 27.1

+++
** New function assoc-delete-all.

** 'print-quoted' now defaults to t, so if you want to see
(quote x) instead of 'x you will have to bind it to nil where applicable.

** To avoid confusion caused by "smart quotes", the reader signals an
error when reading Lisp symbols which begin with one of the following
quotation characters: ‘’‛“”‟〞＂＇.  A symbol beginning with such a
character can be written by escaping the quotation character with a
backslash.  For example:

    (read "‘smart") => (invalid-read-syntax "strange quote" "‘")
    (read "\\‘smart") == (intern "‘smart")

** Internal parsing commands now use syntax-ppss and disregard
open-paren-in-column-0-is-defun-start.  This affects mostly things like
forward-comment, scan-sexps, and forward-sexp when parsing backward.
The new variable 'comment-use-syntax-ppss' can be set to nil to recover the old
behavior if needed.

** The `server-name' and `server-socket-dir' variables are set when a
socket has been pased to Emacs (Bug#24218).

---
** The 'file-system-info' function is now available on all platforms.
instead of just Microsoft platforms.  This fixes a 'get-free-disk-space'
bug on OS X 10.8 and later (Bug#28639).

---
** The function 'get-free-disk-space' returns now a non-nil value for
remote systems, which support this check.

+++
** The function 'make-string' accepts an additional optional argument.
If the optional third argument is non-nil, 'make-string' will produce
a multibyte string even if its second argument is an ASCII character.

** New JSON parsing and serialization functions 'json-serialize',